fix: layout issue on browser

--- a/src/DatePicker/datepicker.scss
+++ b/src/DatePicker/datepicker.scss
@@ -141,6 +141,6 @@
     width: 92%;
   }
   .highlight-list {
-    top: -75px;
+    top: -60px;
   }
 };
